# task_planner_backend

./: Dockerfile  README.md  datamodel.md  docker-compose.yaml  manage.py  pyproject.toml  supervisord.conf
api_v1/: urls.py
api_v1/views/: __init__.py  base_view.py  categories_view.py  menu_view.py  optimizer_view.py  project_view.py  status_view.py  task_view.py  user_assignment_view.py  user_view.py
core/: admin.py  auth.py  menu.py  models.py  permissions.py  services.py
core/migrations/: 0001_initial.py  0002_status_active_state_alter_customuser_is_admin_and_more.py  0003_customuser_avatar_status_closed_state.py  0004_remove_task_assigned_user_remove_task_description_and_more.py  0005_remove_task_estimated_finalization.py  0006_project_trigram_status_blocked_state_and_more.py  0007_remove_status_active_state_and_more.py  0008_task_created_at.py  0009_customuser_categories.py  0010_status_color.py  0011_status_dark_color.py  0012_alter_task_order.py  0013_alter_status_dark_color.py  0014_workflowtransition.py  0015_remove_customuser_is_admin_and_more.py  0016_delete_taskaudit.py  0017_task_estimated_finalization.py  0018_task_estimated_picked_at.py
core/serializers/: __init__.py  (+8 more)
docs/: postman_collection.json  postman_environment.json
multitaskill/: asgi.py  settings.py  urls.py  wsgi.py
optimization/: optimizer.py  serializers.py  services.py
stats/: apps.py  services.py  tasks.py
task_manager/: admin.py  auth.py  menu.py  models.py  permissions.py  serializers.py  urls.py  views.py
task_planner/: asgi.py  auth.py  settings.py  urls.py  wsgi.py
(+41 files in other folders)
